Fixing alignwide and alignfull styling: - unusual overflow that is causing horizontal scroll, not ideal - used overflow-x: hidden for Home page only

--- a/sass/base/elements/_body.scss
+++ b/sass/base/elements/_body.scss
@@ -4,6 +4,10 @@ body {
 	height: 100%;
 }
 
+.home {
+	overflow-x: hidden;
+}
+
 /* For footer to sit at the bottom of the page
 * and fill pages where the content is too short to fill the screen height
 * keep flex-grow in site-main
